# dapr-state-cache

./: .coverage  .coveragerc  .gitignore  CODE_OF_CONDUCT.md  ESPECIFICACAO_TECNICA.md  LICENSE  Makefile  README.md  SECURITY.md  TECHNICAL_SPECIFICATION.md  pyproject.toml  pytest.ini
.cursor/rules/code/: python-clean-code-tdd.mdc
.cursor/rules/core/: ambiguity-uncertainty.mdc
.cursor/rules/markdown/: markdown-quality-standards.mdc
.github/: dependabot.yml
.github/workflows/: codeql.yml
src/dapr_state_cache/: __init__.py  backend.py  decorator.py  deduplication.py  exceptions.py  key_builder.py  metrics.py  protocols.py  serializer.py
src/dapr_state_cache/backend/: __init__.py  constants.py  dapr_state_backend.py  exceptions.py
src/dapr_state_cache/codecs/: __init__.py  json_serializer.py  msgpack_serializer.py  normalizers.py  pickle_serializer.py
src/dapr_state_cache/core/: __init__.py  cache_operations.py  cache_orchestrator.py  cache_service.py  constants.py  crypto_integration.py  orchestration_handlers.py  sync_async_bridge.py  validators.py
src/dapr_state_cache/decorators/: __init__.py  cacheable.py  cacheable_factory.py  component_builder.py  config.py  configuration_resolver.py  wrapper_builder.py
src/dapr_state_cache/keys/: __init__.py  argument_filter.py  default_key_builder.py  hash_utils.py  method_type_detector.py
src/dapr_state_cache/observability/: __init__.py  hooks.py  metrics.py
src/dapr_state_cache/orchestration/: __init__.py  deduplication.py
tests/: __init__.py  conftest.py
tests/integration/: test_cacheable_integration.py
tests/unit/: test_backend.py  test_cache_orchestrator.py  test_codecs.py  test_core.py  test_decorator.py  test_decorators.py  test_decorators_coverage.py  test_deduplication.py  test_key_builder.py  test_keys.py  test_metrics.py  test_observability.py  test_orchestration.py  test_protocols.py  test_serializer.py  test_sync_async_bridge.py  test_validators.py
